--- a/templates/login.html
+++ b/templates/login.html
@@ -64,7 +64,7 @@
     <button type="submit" class="btn btn-primary btn-block">Login</button>
   </form>
   <div class="mt-3 text-center">
-    <a href="#">Forgot Password?</a>
+    <a href={% url 'password_reset' %}>Forgot Password?</a>
   </div>
 </div>
 
