--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -38,6 +38,7 @@
             background-color: #ff5a41;
         }
     </style>
+<!--might need some change if link expires-->
 </head>
 <body>
     <div class="container">
