--- a/templates/loggedin.html
+++ b/templates/loggedin.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Loggedin Page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HTML Anchor Example</title>
 </head>
-
 <body>
-<h2>successfully logged in</h2>
+    <p>This is a paragraph with a link to <a href="\profile">Example Website</a>.</p>
 </body>
 </html>
+
+
