--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,23 @@
   .dropdown-item {
     color: rgb(247, 74, 60); 
   }
+  /* Properties section */
+  .property-card {
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  .property-card img {
+    width: 100%;
+    border-radius: 5px;
+  }
+  .property-card h3 {
+    margin-top: 10px;
+  }
+  .property-card p {
+    margin-bottom: 10px;
+  }
 </style>
 </head>
 <body>
@@ -69,7 +86,7 @@
     <!-- Property Card 1 -->
     <div class="col-md-4">
       <div class="property-card">
-        <img src="/Users/zareenshyma/Documents/CSE471-Project/images/property1.jpg" alt="Property 1">
+        <img src="static/images/property1.jpg" alt="Property 1">
         <h3>Royal Lotus Hotel</h3>
         <!-- Additional information -->
         <p>Location: Panchagarh, Bangladesh</p>
@@ -82,7 +99,7 @@
     <!-- Property Card 2 -->
     <div class="col-md-4">
       <div class="property-card">
-        <img src="/Users/zareenshyma/Documents/CSE471-Project/images/property2.jpg" alt="Property 2">
+        <img src="static/images/property2.jpg" alt="Property 2">
         <h3>Amber Waves Inn</h3>
         <!-- Additional information -->
         <p>Location: Thakurgaon, Bangladesh</p>
@@ -96,7 +113,7 @@
     <!-- Property Card 3 -->
     <div class="col-md-4">
       <div class="property-card">
-        <img src="/Users/zareenshyma/Documents/CSE471-Project/images/property3.jpg" alt="Property 2">
+        <img src="static/images/property3.jpg" alt="Property 2">
         <h3>Sunbeam Palace</h3>
         <!-- Additional information -->
         <p>Location: Munshiganj, Bangladesh</p>
@@ -110,7 +127,7 @@
     <!-- Property Card 4 -->
     <div class="col-md-4">
       <div class="property-card">
-        <img src="/Users/zareenshyma/Documents/CSE471-Project/images/property4.jpg" alt="Property 2">
+        <img src="static/images/property4.jpg" alt="Property 2">
         <h3>Golden Orchid Inn</h3>
         <!-- Additional information -->
         <p>Location: Dhaka, Bangladesh</p>
@@ -123,7 +140,7 @@
     <!-- Property Card 5-->
     <div class="col-md-4">
       <div class="property-card">
-        <img src="/Users/zareenshyma/Documents/CSE471-Project/images/property5.jpg" alt="Property 2">
+        <img src="static/images/property5.jpg" alt="Property 2">
         <h3>Sapphire Retreat</h3>
         <!-- Additional information -->
         <p>Location: Barisal, Bangladesh</p>
@@ -137,7 +154,7 @@
     <!-- Property Card 6 -->
     <div class="col-md-4">
       <div class="property-card">
-        <img src="/Users/zareenshyma/Documents/CSE471-Project/images/property6.jpg" alt="Property 6">
+        <img src="static/images/property6.jpg" alt="Property 6">
         <h3>Moonlit Mirage Hotel</h3>
         <!-- Additional information -->
         <p>Location: Rangpur, Bangladesh</p>
