--- a/templates/loggedin.html
+++ b/templates/loggedin.html
@@ -57,6 +57,23 @@
     background-color: rgb(247, 74, 60);
     box-shadow: 0 0 10px black;
   }
+  /* Properties section */
+  .property-card {
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  .property-card img {
+    width: 100%;
+    border-radius: 5px;
+  }
+  .property-card h3 {
+    margin-top: 10px;
+  }
+  .property-card p {
+    margin-bottom: 10px;
+  }
 </style>
 </head>
 <body>
@@ -87,13 +104,13 @@
 </nav>
 
 <div class="container mt-4">
-  <h2 class="text-center">Featured Properties</h2> <!-- Center the heading -->
-  <div class="row justify-content-center"> <!-- Center the row -->
+  <h2 class="text">Featured Properties</h2> <!-- Center the heading -->
+  <div class="row"> <!-- Center the row -->
   <!--<div class="row">
     <!-- Property Card 1 -->
     <div class="col-md-4">
       <div class="property-card">
-        <img src="/Users/zareenshyma/Documents/CSE471-Project/images/property1.jpg" alt="Property 1">
+        <img src="static/images/property1.jpg" alt="Property 1">
         <h3>Royal Lotus Hotel</h3>
         <!-- Additional information -->
         <p>Location: Panchagarh, Bangladesh</p>
@@ -108,7 +125,7 @@
     <!-- Property Card 2 -->
     <div class="col-md-4">
       <div class="property-card">
-        <img src="/Users/zareenshyma/Documents/CSE471-Project/images/property2.jpg" alt="Property 2">
+        <img src="static/images/property2.jpg" alt="Property 2">
         <h3>Amber Waves Inn</h3>
         <!-- Additional information -->
         <p>Location: Thakurgaon, Bangladesh</p>
@@ -122,7 +139,7 @@
     <!-- Property Card 3 -->
     <div class="col-md-4">
       <div class="property-card">
-        <img src="/Users/zareenshyma/Documents/CSE471-Project/images/property3.jpg" alt="Property 2">
+        <img src="static/images/property3.jpg" alt="Property 2">
         <h3>Sunbeam Palace</h3>
         <!-- Additional information -->
         <p>Location: Munshiganj, Bangladesh</p>
@@ -136,7 +153,7 @@
     <!-- Property Card 4 -->
     <div class="col-md-4">
       <div class="property-card">
-        <img src="/Users/zareenshyma/Documents/CSE471-Project/images/property4.jpg" alt="Property 2">
+        <img src="static/images/property4.jpg" alt="Property 2">
         <h3>Golden Orchid Inn</h3>
         <!-- Additional information -->
         <p>Location: Dhaka, Bangladesh</p>
@@ -149,7 +166,7 @@
     <!-- Property Card 5-->
     <div class="col-md-4">
       <div class="property-card">
-        <img src="/Users/zareenshyma/Documents/CSE471-Project/images/property5.jpg" alt="Property 2">
+        <img src="static/images/property5.jpg" alt="Property 2">
         <h3>Sapphire Retreat</h3>
         <!-- Additional information -->
         <p>Location: Barisal, Bangladesh</p>
@@ -163,7 +180,7 @@
     <!-- Property Card 6 -->
     <div class="col-md-4">
       <div class="property-card">
-        <img src="/Users/zareenshyma/Documents/CSE471-Project/images/property6.jpg" alt="Property 6">
+        <img src="static/images/property6.jpg" alt="Property 6">
         <h3>Moonlit Mirage Hotel</h3>
         <!-- Additional information -->
         <p>Location: Rangpur, Bangladesh</p>
