--- a/templates/property_det.html
+++ b/templates/property_det.html
@@ -92,13 +92,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/Users/zareenshyma/Documents/CSE471-Project/hotel_img/hotel1.jpg" class="d-block w-100" alt="Property Image 1">
+            <img src="static/hotel_img/hotel1.jpg" class="d-block w-100" alt="Property Image 1">
           </div>
           <div class="carousel-item">
-            <img src="/Users/zareenshyma/Documents/CSE471-Project/hotel_img/hotel2.jpg" class="d-block w-100" alt="Property Image 2">
+            <img src="static/hotel_img/hotel2.jpg" class="d-block w-100" alt="Property Image 2">
           </div>
           <div class="carousel-item">
-            <img src="/Users/zareenshyma/Documents/CSE471-Project/hotel_img/hotel3.jpg" class="d-block w-100" alt="Property Image 3">
+            <img src="static/hotel_img/hotel3.jpg" class="d-block w-100" alt="Property Image 3">
           </div>
         </div>
         <a class="carousel-control-prev" href="#property-carousel" role="button" data-slide="prev">
