verification, owner side info

--- a/templates/loggedin.html
+++ b/templates/loggedin.html
@@ -195,7 +195,7 @@
     {% if property.verified %}
     <div class="col-md-4">
       <div class="property-card">
-        <img src="{{ property.p_image.url }}" alt="{{ property.types }}">
+        <img src="{{ property.p_image1.url }}" alt="{{ property.types }}">
         <h3>{{property.types}}</h3>
         <p>Location: {{ property.city }}, {{property.country}}</p>
         <!--<p>Distance: {{ object.distance }}</p>-->
