--- a/templates/profile.html
+++ b/templates/profile.html
@@ -60,7 +60,7 @@
         <a href="/edit_profile" class="btn">Edit Profile</a>
         <a href="/loggedin" class="btn">Return Home</a>
         {% if user_data.role == 'owner' %}
-        <a href="#" class="btn">Properties</a>
+        <a href="\property_info" class="btn">Properties</a>
         {% endif %}
     </div>
 </body>
