negotiation (most) complaint(html)

--- a/templates/property_info.html
+++ b/templates/property_info.html
@@ -108,7 +108,7 @@
         <h1><u>Property Owner Dashboard</u></h1>
 
         <!-- Negotiation List button as a hyperlink -->
-        <a href="#" class="btn">Negotiation List</a>
+        <a href="/negotiation" class="btn">Negotiation List</a>
         <a href="/loggedin" class="btn">return home</a>
 
         <h2>Your Properties</h2>
@@ -158,35 +158,35 @@
                 <td><a href="#">Omar</a></td>
                 <td>5</td>
                 <td>$1500</td>
-                <td><a href="#" class="btn btn-view">View</a></td>
+                <td><a href="/customer_complaint" class="btn btn-view">Complaint</a></td>
             </tr>
             <tr>
                 <td><a href="#">Coxs bazar</a></td>
                 <td><a href="#">Avishekh</a></td>
                 <td>7</td>
                 <td>$2000</td>
-                <td><a href="#" class="btn btn-view">View</a></td>
+                <td><a href="/customer_complaint" class="btn btn-view">Complaint</a></td>
             </tr>
             <tr>
-                <td><a href="#">Sylhet</a></td>
+                <td><a href='#'>Sylhet</a></td>
                 <td><a href="#">Arnob</a></td>
                 <td>5</td>
                 <td>$2000</td>
-                <td><a href="#" class="btn btn-view">View</a></td>
+                <td><a href="/customer_complaint" class="btn btn-view">Complaint</a></td>
             </tr>
             <tr>
                 <td><a href="#">Dhaka</a></td>
                 <td><a href="#">Thor</a></td>
                 <td>5</td>
                 <td>$800</td>
-                <td><a href="#" class="btn btn-view">View</a></td>
+                <td><a href="/customer_complaint" class="btn btn-view">Complaint</a></td>
             </tr>
             <tr>
                 <td><a href="#">CTG resort</a></td>
                 <td><a href="#">Hulk</a></td>
                 <td>12</td>
                 <td>$1800</td>
-                <td><a href="#" class="btn btn-view">View</a></td>
+                <td><a href="/customer_complaint" class="btn btn-view">Complaint</a></td>
             </tr>
             <!-- End of additional rows -->
             </tbody>
