--- a/templates/loggedin.html
+++ b/templates/loggedin.html
@@ -4,10 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HomeScape | Enlist and Rent</title>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
+integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 <style>
   /* Custom styles */
   .navbar-brand {
@@ -30,7 +28,7 @@
   }
   .btn-search {
     background-color: rgb(247, 74, 60);
-    border-color: black;
+    border-color: rgb(247, 74, 60);
     color: white;
   }
   .btn-search:hover {
@@ -41,13 +39,10 @@
     color: black; 
   }
   .dropdown-item {
-    color: rgb(247, 74, 60); 
+    color: white 
   }
   .dropdown-menu {
     background-color: rgb(247, 74, 60);
-    color: white;
-  }
-  .dropdown-item {
     color: white;
   }
   .btn-secondary,
@@ -80,7 +75,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand mr-auto" href="" style="padding-right: 8px;">HomeScape</a> <!-- Shifted right by 8 pixels -->
+    <a class="navbar-brand" href="">HomeScape</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -89,19 +84,28 @@
         <input class="form-control mr-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-search my-2 my-sm-0" type="submit">Search</button>
       </form>
-      <div class="btn-group ms-auto"> <!-- Aligns the dropdown menu to the right -->
-        <button id="dropdownButton" type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+      <div class="btn-group">
+        <button id="dropdownButton" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
           Dashboard
         </button>
-        <ul class="dropdown-menu dropdown-menu-end" style=""> <!-- Right-aligned dropdown menu -->
-          <li><a class="dropdown-item" href="/profile">Profile</a></li> <!-- Changed button to a -->
-          <li><a class="dropdown-item" href="/logout">Logout</a></li> <!-- Changed button to a -->
-          <li><a class="dropdown-item" href="/property_add">Enlist your property</a></li> <!-- Changed button to a -->
-        </ul>
+        <div class="dropdown-menu dropdown-menu-right">
+          <button class="dropdown-item" type="button" onclick="window.location.href='/profile'">Profile</button>
+          <button class="dropdown-item" type="button" onclick="window.location.href='/logout'">Logout</button>
+          <button class="dropdown-item" type="button" onclick="window.location.href='/property_add'">Enlist your property</button>
+        </div>
       </div>
     </div>
   </div>
 </nav>
+
+{% for message in messages %}
+<div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+  <strong>Message:</strong> {{ message }}
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+{%endfor%}
 
 <div class="container mt-4">
   <h2 class="text">Featured Properties</h2> <!-- Center the heading -->
@@ -209,6 +213,9 @@
 
   </div>
 </div>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 <script>
     const dropdownButton = document.getElementById('dropdownButton');
   
@@ -223,7 +230,7 @@
       dropdownButton.style.backgroundColor = 'rgb(247, 74, 60)';
       dropdownButton.style.boxShadow = 'none';
     });
-  </script>
+</script>
 </body>
 </html>
 
