--- a/templates/loggedin.html
+++ b/templates/loggedin.html
@@ -50,7 +50,6 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
   .btn-secondary:focus,
   .btn-secondary:active {
     background-color: rgb(247, 74, 60);
-    box-shadow: 0 0 10px black;
   }
   /* Properties section */
   .property-card {
@@ -69,6 +68,24 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
   .property-card p {
     margin-bottom: 10px;
   }
+  .btn-light {
+    border-color: rgb(247, 74, 60);
+    color: rgb(247, 74, 60);
+    background-color: white;
+  }
+  .btn-light:hover {
+    border-color: rgb(247, 74, 60);
+    color: rgb(247, 74, 60);
+    background-color: white;
+    box-shadow: 0 0 10px rgb(247, 74, 60)
+  }
+  .btn-light:focus,
+  .btn-light:active{
+    border-color: rgb(247, 74, 60);
+    color: white;
+    background-color: rgb(247, 74, 60);
+    box-shadow: 0 0 10px rgb(247, 74, 60)
+  }
 </style>
 </head>
 <body>
@@ -80,8 +97,10 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <form class="form-inline my-2 my-lg-0 mx-auto">
-        <input class="form-control mr-2" type="search" placeholder="Search" aria-label="Search">
+      <form class="form-inline my-2 my-lg-0 mx-auto" method = 'POST' action = '/loggedin'>
+        {%csrf_token%}
+        <input class="form-control mr-2" type="search" placeholder="Search" aria-label="Search" 
+        value = "{{ place }}" name = 'search' id = 'search'>
         <button class="btn btn-search my-2 my-sm-0" type="submit">Search</button>
       </form>
       <div class="btn-group">
@@ -108,93 +127,51 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
 {%endfor%}
 
 <div class="container mt-4">
-  <h2 class="text">Featured Properties</h2> <!-- Center the heading -->
-  <div class="row"> <!-- Center the row -->
-  <!--<div class="row">
-    <!-- Property Card 1 -->
-    <div class="col-md-4">
-      <div class="property-card">
-        <img src="static/images/property1.jpg" alt="Property 1">
-        <h3>Royal Lotus Hotel</h3>
-        <!-- Additional information -->
-        <p>Location: Panchagarh, Bangladesh</p>
-        <p>Distance: 170 kms away</p>
-        <p>Available: April 3-8</p>
-        <p>Rate: 10,000 taka/night</p>
-        <a href="/property_det" class="btn btn-search my-2 my-sm-0">View Details</a>
-      </div>
+  <div class="row justify-content-center align-items-center">
+    <div class="col-md-2">
+      <form method = 'POST' action = '/loggedin'>
+        {%csrf_token%}
+        <input type="hidden" name="types" value="Apartment">
+        <button type="submit" class="btn btn-light btn-block">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-building" viewBox="0 0 20 20">
+            <path d="M4 2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM4 5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zM7.5 5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zM4.5 8a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"/>
+            <path d="M2 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1zm11 0H3v14h3v-2.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5V15h3z"/>
+          </svg>
+          Apartment
+        </button>
+      </form>
     </div>
+    <div class="col-md-2">
+      <form method = 'POST' action = '/loggedin'>
+        {%csrf_token%}
+        <input type="hidden" name="types" value="Villa">
+        <button type="submit" class="btn btn-light btn-block">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-houses-fill" viewBox="0 0 20 20">
+            <path d="M7.207 1a1 1 0 0 0-1.414 0L.146 6.646a.5.5 0 0 0 .708.708L1 7.207V12.5A1.5 1.5 0 0 0 2.5 14h.55a2.5 2.5 0 0 1-.05-.5V9.415a1.5 1.5 0 0 1-.56-2.475l5.353-5.354z"/>
+            <path d="M8.793 2a1 1 0 0 1 1.414 0L12 3.793V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v3.293l1.854 1.853a.5.5 0 0 1-.708.708L15 8.207V13.5a1.5 1.5 0 0 1-1.5 1.5h-8A1.5 1.5 0 0 1 4 13.5V8.207l-.146.147a.5.5 0 1 1-.708-.708z"/>
+          </svg>
+          Villa
+        </button>
+      </form>
+    </div>
+    <div class="col-md-2">
+      <form method = 'POST' action = '/loggedin'>
+        {%csrf_token%}
+        <input type="hidden" name="types" value="Cabin">
+        <button type="submit" class="btn btn-light btn-block">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-house" viewBox="0 0 20 20">
+            <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293zM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5z"/>
+          </svg>
+          Cabin
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
 
-  
-    <!-- Property Card 2 -->
-    <div class="col-md-4">
-      <div class="property-card">
-        <img src="static/images/property2.jpg" alt="Property 2">
-        <h3>Amber Waves Inn</h3>
-        <!-- Additional information -->
-        <p>Location: Thakurgaon, Bangladesh</p>
-        <p>Distance: 189 kms away</p>
-        <p>Available: May 13-18</p>
-        <p>Rate: 5,000 taka/night</p>
-        <a href="#" class="btn btn-search my-2 my-sm-0">View Details</a>
-      </div>
-    </div>
-
-    <!-- Property Card 3 -->
-    <div class="col-md-4">
-      <div class="property-card">
-        <img src="static/images/property3.jpg" alt="Property 2">
-        <h3>Sunbeam Palace</h3>
-        <!-- Additional information -->
-        <p>Location: Munshiganj, Bangladesh</p>
-        <p>Distance: 250 kms away</p>
-        <p>Available: March 30-31</p>
-        <p>Rate: 8,000 taka/night</p>
-        <a href="#" class="btn btn-search my-2 my-sm-0">View Details</a>
-      </div>
-    </div>
-
-    <!-- Property Card 4 -->
-    <div class="col-md-4">
-      <div class="property-card">
-        <img src="static/images/property4.jpg" alt="Property 2">
-        <h3>Golden Orchid Inn</h3>
-        <!-- Additional information -->
-        <p>Location: Dhaka, Bangladesh</p>
-        <p>Distance: 50 kms away</p>
-        <p>Available: June 22-28</p>
-        <p>Rate: 10,000 taka/night</p>
-        <a href="#" class="btn btn-search my-2 my-sm-0">View Details</a>
-      </div>
-    </div>
-    <!-- Property Card 5-->
-    <div class="col-md-4">
-      <div class="property-card">
-        <img src="static/images/property5.jpg" alt="Property 2">
-        <h3>Sapphire Retreat</h3>
-        <!-- Additional information -->
-        <p>Location: Barisal, Bangladesh</p>
-        <p>Distance: 350 kms away</p>
-        <p>Available: March 1-5</p>
-        <p>Rate: 11,000 taka/night</p>
-        <a href="#" class="btn btn-search my-2 my-sm-0">View Details</a>
-      </div>
-    </div>
-
-    <!-- Property Card 6 -->
-    <div class="col-md-4">
-      <div class="property-card">
-        <img src="static/images/property6.jpg" alt="Property 6">
-        <h3>Moonlit Mirage Hotel</h3>
-        <!-- Additional information -->
-        <p>Location: Rangpur, Bangladesh</p>
-        <p>Distance: 150 kms away</p>
-        <p>Available: March 14-26</p>
-        <p>Rate: 9,000 taka/night</p>
-        <a href="#" class="btn btn-search my-2 my-sm-0">View Details</a>
-      </div>
-    </div>
-
+<div class="container mt-4">
+  <h2 class="text">Featured Properties</h2>
+  <div class="row">
     {% for property in properties %}
     {% if property.verified %}
     <div class="col-md-4">
@@ -210,9 +187,9 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
     </div>
     {% endif %}
     {% endfor %}
-
   </div>
 </div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
@@ -222,7 +199,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
     dropdownButton.addEventListener('mousedown', function(event) {
       // Change the background color when mouse button is held down
       dropdownButton.style.backgroundColor = 'rgb(247, 74, 60)';
-      dropdownButton.style.boxShadow = '0 0 10px black';
+      dropdownButton.style.boxShadow = '0 0 10px rgb(247, 74, 60)';
     });
   
     dropdownButton.addEventListener('mouseup', function(event) {
