--- a/templates/loggedin.html
+++ b/templates/loggedin.html
@@ -182,7 +182,7 @@ integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xX
         <!--<p>Distance: {{ object.distance }}</p>-->
         <p>Available: March 14-26</p>
         <p>Rate: {{property.price}}</p>
-        <a href="#" class="btn btn-search my-2 my-sm-0">View Details</a>
+        <a href="/property_det/{{ property.p_id }}/" class="btn btn-search my-2 my-sm-0">View Details</a>
       </div>
     </div>
     {% endif %}
