--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -47,7 +47,7 @@
                 <p><strong>Property:</strong> {{ property.property_name }}</p>
                 <p><strong>Check in:</strong> {{ book.check_in }}</p>
                 <p><strong>Check out:</strong> {{ book.check_out }}</p>
-                <p><strong>Price:</strong> {{ book.price }}</p>
+                <p><strong>Price:</strong> {{ book.neg_price }}</p>
                 <br>
                 <div id="paypal-button-container"></div>
             </div> 
