--- a/templates/property_add.html
+++ b/templates/property_add.html
@@ -224,11 +224,11 @@
             <div class="col-md-6">
               <label class="options-title">Common Space:</label>
               <div class="option">
-                <input type="radio" id="shared" name="common_space" value="shared">
+                <input type="radio" id="shared" name="common_space" value="Shared">
                 <label for="shared">Shared</label>
               </div>
               <div class="option">
-                <input type="radio" id="dedicated" name="common_space" value="dedicated">
+                <input type="radio" id="dedicated" name="common_space" value="Dedicated">
                 <label for="dedicated">Dedicated</label>
               </div>
               <div class="option">
