--- a/templates/admin_dash.html
+++ b/templates/admin_dash.html
@@ -68,6 +68,8 @@
     <a href="/blacklist" class="button-link">Blacklist</a>
     <h2>Voucher Settings</h2>
     <a href="/voucher" class="button-link">Apply Vouchers</a>
+    <h2>Logout</h2>
+    <a href="/logout" class="button-link">Logout</a>
 </div>
 
 </body>
